@@ -3,7 +3,7 @@ module Yamltest
     
     MAJOR = 0
     MINOR = 5
-    TINY  = 1
+    TINY  = 3
     
     def self.to_s # :nodoc:
       [MAJOR, MINOR, TINY].join('.')
