@@ -2,11 +2,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{yamltest}
-  s.version = "0.5.2"
+  s.version = "0.5.3"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Gaspard Bucher"]
-  s.date = %q{2009-05-28}
+  s.date = %q{2009-06-17}
   s.email = %q{gaspard@teti.ch}
   s.extra_rdoc_files = ["README.rdoc"]
   s.files = ["History.txt", "Manifest.txt", "Rakefile", "README.rdoc", "test/gem_test", "test/gem_test/foo.yml", "test/gem_test/simple_test.rb", "test/test_helper.rb", "test/yamltest", "test/yamltest/simple.yml", "test/yamltest_test.rb", "test/zoo", "test/zoo/complicated.yml", "lib/yamltest", "lib/yamltest/version.rb", "lib/yamltest.rb"]
