@@ -1,7 +1,12 @@
+== yamltest 0.5.3 2009-06-17
+
+* 1 minor improvement
+	* Added support for spaces in method names
+
 == yamltest 0.5.2 2009-05-28
 
 * 1 minor improvement
-	* Added an option to disable generating 'src' from the test tile
+	* Added an option to disable generating 'src' from the test title
 
 == yamltest 0.5.1 2009-02-02
 
